added team and testimonials

--- a/index.html
+++ b/index.html
@@ -175,6 +175,95 @@
       </div>
     </section><!-- End About Section -->
 
+<!-- ======= Team Section ======= -->
+    <section id="team" class="team">
+      <div class="container">
+
+        <div class="section-title" data-aos="zoom-out">
+          <h2>Our Leadership</h2>
+          <!-- <p>Our Hardworking Team</p> -->
+        </div>
+
+        <div class="row">
+          <p> We are lead by Dhruv Sharma. Dhruv is a seasoned industry veteran with a sound educational background. He has rich technical industry experience in AI, Robotics, Computer Vision, and Data Science working at companies like NVIDIA, Huawei, Capital One, etc. With a bachelors in Mechatronics Engineering from the University of Waterloo and a Masters in Computer Science from the University of Toronto, Dhruv has tremendous knowledge to lead projects from inception to completion. </p>
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up">
+              <div class="member-img">
+                <img src="assets/img/team/dhruv-photo.jpeg" class="img-fluid" alt="">
+                <div class="social">
+                  <!-- <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a> -->
+                  <a href="https://d32sharm.github.io/" target="_blank"><i class="bi bi-globe"></i></a>
+                  <a href="https://www.linkedin.com/in/dhruvsharmauw/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Dhruv Sharma</h4>
+                <span>Chief Executive Officer</span>
+              </div>
+            </div>
+          </div>
+<!-- 
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="member-img">
+                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Sarah Jhonson</h4>
+                <span>Product Manager</span>
+              </div>
+            </div>
+          </div> -->
+
+         <!--  <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="200">
+              <div class="member-img">
+                <img src="assets/img/team/sugandha-sharma.jpeg" class="img-fluid" alt="">
+                <div class="social"> -->
+                  <!-- <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a> -->
+               <!--    <a href="https://www.linkedin.com/in/sugandhasharma17" target="_blank"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Sugandha Sharma</h4>
+                <span>CTO</span>
+              </div>
+            </div>
+          </div> -->
+
+      <!--     <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="300">
+              <div class="member-img">
+                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Amanda Jepson</h4>
+                <span>Accountant</span>
+              </div>
+            </div>
+          </div> -->
+
+       </div>
+
+      </div>
+    </section> <!-- End Team Section -->
+
     <!-- ======= Features Section ======= -->
   <!--   <section id="features" class="features">
       <div class="container">
@@ -309,23 +398,6 @@
       </div>
     </section> --><!-- End Features Section -->
 
-    <!-- ======= Cta Section ======= -->
-    <!-- <section id="cta" class="cta">
-      <div class="container">
-
-        <div class="row" data-aos="zoom-out">
-          <div class="col-lg-9 text-center text-lg-start">
-            <h3>Call To Action</h3>
-            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
-          <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#">Call To Action</a>
-          </div>
-        </div>
-
-      </div>
-    </section> --><!-- End Cta Section -->
-
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
       <div class="container">
@@ -336,6 +408,7 @@
         </div>
 
         <div class="row">
+
           <div class="col-lg-4 col-md-6">
             <div class="icon-box" data-aos="zoom-in-left">
               <div class="icon"><i class="bi bi-code-square" style="color: #68aeff;"></i></div>
@@ -343,6 +416,7 @@
               <p class="description">Extensive experience in working on software products. Building software systems using cutting edge tech.</p>
             </div>
           </div>
+
           <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
             <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="100">
               <div class="icon"><i class="bi bi-book" style="color: #e9bf06;"></i></div>
@@ -351,14 +425,15 @@
             </div>
           </div>
 
-          <!-- <div class="col-lg-4 col-md-6 mt-5 mt-lg-0 ">
+          <div class="col-lg-4 col-md-6 mt-5 mt-lg-0 ">
             <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="200">
               <div class="icon"><i class="bi bi-card-checklist" style="color: #3fcdc7;"></i></div>
-              <h4 class="title">Computer Vison</a></h4>
-              <p class="description">Build efficient computer vision pipelines using latest research in the field</p>
+              <h4 class="title">Robotics & Computer Vison</a></h4>
+              <p class="description">Build efficient computer vision pipelines using latest research in the field. Provide robotics consulting for autonomous robotics.</p>
             </div>
-          </div> -->
-           <div class="col-lg-4 col-md-6 mt-5 mt-lg-0">
+          </div>
+
+           <div class="col-lg-4 col-md-6 mt-5">
             <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="300">
               <div class="icon"><i class="bi bi-binoculars" style="color:#41cf2e;"></i></div>
               <h4 class="title"><a href="">Data Science</a></h4>
@@ -366,20 +441,22 @@
             </div>
           </div>
 
-         <!--<div class="col-lg-4 col-md-6 mt-5">
+         <div class="col-lg-4 col-md-6 mt-5">
             <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="400">
-              <div class="icon"><i class="bi bi-globe" style="color: #d6ff22;"></i></div>
-              <h4 class="title"><a href="">Robotics</a></h4>
-              <p class="description">We have background in state of the art robotics systems. </p>
+              <div class="icon"><i class="bi bi-clipboard-data" style="color: #d6ff22;"></i></div>
+              <h4 class="title"><a href="">Data Labeling</a></h4>
+              <p class="description">We understand the importance of quality annotations. We provide excellent quality annotation service to help train your AI models.</p>
             </div>
           </div>
+
           <div class="col-lg-4 col-md-6 mt-5">
             <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="500">
-              <div class="icon"><i class="bi bi-clock" style="color: #4680ff;"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <div class="icon"><i class="bi bi-people-fill" style="color: #4680ff;"></i></div>
+              <h4 class="title"><a href="">Digital Marketing</a></h4>
+              <p class="description">Custom Ad campaigns on popular platforms - Google, Facebook, Instagram using selective strategies to maximize reach and deliver quick results.</p>
             </div>
-          </div> -->
+          </div>
+
         </div>
 
       </div>
@@ -499,7 +576,7 @@
     </section> --><!-- End Portfolio Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <!-- <section id="testimonials" class="testimonials">
+    <section id="testimonials" class="testimonials">
       <div class="container">
 
         <div class="section-title" data-aos="zoom-out">
@@ -514,11 +591,11 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  Convolve assisted with setup of data pipelines to analyze the customer data we collect. This helped us a lot to improve our offerings and gather insights.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
+                <h3>Saul McCarthur</h3>
                 <h4>Ceo &amp; Founder</h4>
               </div>
             </div>
@@ -527,12 +604,12 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  Convolve did a wonderful job integrating the openAI gpt API with our lead gen tools. This allowed us to better engage and leads and hence increased our conversions.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
                 <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
+                <h4>Solutions Architect</h4>
               </div>
             </div>
 
@@ -540,7 +617,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  We seeked convolve's assistance wiht creating a CRM system for our business. They pointed us to Zoho suite. Not only was it price efficient, but also offered all the functionalities. The integration was smooth helping our business stay connected with our customers.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
@@ -553,16 +630,16 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                  We wanted to use vision to detect anomalies. The team at Convolve was able to develop a solution for us. It was accurate, easy to use, and served our purpose. They are able to understand computer vision problems and provide amazing solutions, a skill that is hard to find elsewhere.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
                 <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
+                <h4>Computer Vision Expert</h4>
               </div>
             </div>
 
-            <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -573,14 +650,14 @@
                 <h3>John Larson</h3>
                 <h4>Entrepreneur</h4>
               </div>
-            </div>
+            </div> -->
 
           </div>
           <div class="swiper-pagination"></div>
         </div>
 
       </div>
-    </section> -->
+    </section>
     <!-- End Testimonials Section -->
 
     <!-- ======= Pricing Section ======= -->
@@ -738,93 +815,23 @@
       </div>
     </section> --><!-- End F.A.Q Section -->
 
-    <!-- ======= Team Section ======= -->
-    <!-- <section id="team" class="team">
+        <!-- ======= Cta Section ======= -->
+    <section id="cta" class="cta">
       <div class="container">
 
-        <div class="section-title" data-aos="zoom-out">
-          <h2>Team</h2>
-          <p>Our Hardworking Team</p>
+        <div class="row" data-aos="zoom-out">
+          <div class="col-lg-9 text-center text-lg-start">
+            <h3>Call To Action</h3>
+            <p> Reach out to us to discuss your current needs in terms of technology. Whatever your issues are, we would love to hear them and develop a solution for you.</p>
+          </div>
+          <div class="col-lg-3 cta-btn-container text-center">
+            <a class="cta-btn align-middle" href="#contact">Call To Action</a>
+          </div>
         </div>
 
-        <div class="row">
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up">
-              <div class="member-img">
-                <img src="assets/img/team/dhruv-sharma.jpeg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href="https://www.linkedin.com/in/dhruvsharmauw/" target="_blank"><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Dhruv Sharma</h4>
-                <span>Chief Executive Officer</span>
-              </div>
-            </div>
-          </div> -->
-<!-- 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
-              </div>
-            </div>
-          </div> -->
-
-         <!--  <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <div class="member-img">
-                <img src="assets/img/team/sugandha-sharma.jpeg" class="img-fluid" alt="">
-                <div class="social"> -->
-                  <!-- <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a> -->
-               <!--    <a href="https://www.linkedin.com/in/sugandhasharma17" target="_blank"><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Sugandha Sharma</h4>
-                <span>CTO</span>
-              </div>
-            </div>
-          </div> -->
-
-      <!--     <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="300">
-              <div class="member-img">
-                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
-              </div>
-            </div>
-          </div> -->
-
-       <!--  </div>
-
       </div>
-    </section> --><!-- End Team Section -->
+    </section>
+    <!-- End Cta Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
