--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Convolve AI</span></h2>
           <p class="animate__animated fanimate__adeInUp">Building robust software powered by AI.</p>
-          <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+          <a href="#contact" class="btn-get-started animate__animated animate__fadeInUp scrollto">Get in Touch</a>
+          <a href="https://convolve-ai-inc.square.site/" target="_blank" class="btn-get-started animate__animated animate__fadeInUp scrollto">Consult Us</a>          
         </div>
       </div>
 
