added consult to slide 2

--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Developing Intelligent Software Systems</h2>
           <p class="animate__animated animate__fadeInUp">We employ state of the art technology to develop software and automation solutions.</p>
-          <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+          <a href="#contact" class="btn-get-started animate__animated animate__fadeInUp scrollto">Get in Touch</a>
+          <a href="https://convolve-ai-inc.square.site/" target="_blank" class="btn-get-started animate__animated animate__fadeInUp scrollto">Consult Us</a>
         </div>
       </div>
 
